test : 레시피 조회 API 테스트 코드 수정
수정내용
- 프로덕션 코드의 리팩토링의 따른 테스트 코드 리팩토링후 단위테스트 진행